Cleaner CSS, commented out unecessary Bootstrap components.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,14 +5,14 @@
     <title>{% if page.collection == "motions" %}{{ page.title }} (#{{ page.number }}) • {% endif %}{{ site.title }}</title>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl}}/assets/css/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl}}/assets/css/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl}}/assets/css/icons/favicon-16x16.png">
-    <link rel="manifest" href="{{ site.baseurl}}/assets/css/icons/site.webmanifest">
-    <link rel="mask-icon" href="{{ site.baseurl}}/assets/css/icons/safari-pinned-tab.svg" color="#006341">
-    <link rel="shortcut icon" href="{{ site.baseurl}}/assets/css/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl}}/css/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl}}/css/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl}}/css/icons/favicon-16x16.png">
+    <link rel="manifest" href="{{ site.baseurl}}/css/icons/site.webmanifest">
+    <link rel="mask-icon" href="{{ site.baseurl}}/css/icons/safari-pinned-tab.svg" color="#006341">
+    <link rel="shortcut icon" href="{{ site.baseurl}}/css/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="msapplication-config" content="{{ site.baseurl}}/assets/css/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="{{ site.baseurl}}/css/icons/browserconfig.xml">
     <meta name="theme-color" content="#00a300">
 
     <!-- Fonts -->
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- Styles (including Bootstrap) -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
     <!-- Google Analytics -->
