--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><img height="32" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/assets/css/icons/gpew-logo.png">{{ site.title }}</a>
+        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><img height="32" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/icons/gpew-logo.png">{{ site.title }}</a>
         <button class="d-md-none navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
