Created more reliable truncation in nav.

--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -15,7 +15,7 @@
 @import "bootstrap/transitions";
 // @import "bootstrap/dropdown";
 // @import "bootstrap/button-group";
-  // @import "bootstrap/nav"; ?
+@import "bootstrap/nav";
 @import "bootstrap/navbar";
 // @import "bootstrap/card";
 // @import "bootstrap/accordion";
