--- a/css/main.scss
+++ b/css/main.scss
@@ -122,3 +122,10 @@ h1, .navbar-brand {
         float: none;
     }
 }
+
+.nav-link {
+  max-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
