--- a/css/main.scss
+++ b/css/main.scss
@@ -129,3 +129,12 @@ h1, .navbar-brand {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.icons {
+  display: flex;
+  justify-content: center;
+}
+
+.icons svg {
+  margin-right:10px;
+}
