First attempt at new frontpage.

--- a/_layouts/appendix.html
+++ b/_layouts/appendix.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: primary
 ---
 <h2 class="small text-muted">Appendix #{{ page.number }}</h2>
 <h1>{{ page.title }}</h1>
