--- a/css/main.scss
+++ b/css/main.scss
@@ -138,3 +138,11 @@ h1, .navbar-brand {
 .icons svg {
   margin-right:10px;
 }
+
+.front-page div {
+  margin-bottom:25px;
+}
+
+.front-page a {
+  color: rgba(0,0,0,0.65);
+}
