--- a/_includes/sidebar-motions.html
+++ b/_includes/sidebar-motions.html
@@ -8,7 +8,7 @@
           <ul class="inner list-unstyled pb-1 small">
             {% for motion in motions %}
             <li class="rounded">
-              <a class="d-flex justify-content-between align-items-center {% if motion.url == page.url == true %}active{% endif %}" href="{{ site.baseurl }}{{ motion.url }}">
+              <a class="d-flex justify-content-between align-items-center {% if motion.url == page.url %}active{% endif %}" href="{{ site.baseurl }}{{ motion.url }}">
                 {{ motion.title }}
                 <span {% unless motion.url == page.url %}text-muted{% endunless %}>#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
               </a>
