--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,22 +8,17 @@ layout: default
 {% for section in site.data.sections %}
   {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
   <div class="col-md-4 column">
-  {% unless motions.size == 0 %}
-  <p class="section-name mb-0 fw-bold">{{section.name}}</p>
+    <p class="section-name mb-0 fw-bold">{{section.name}}</p>
     <ul class="list-unstyled">
       {% for motion in motions %}
-        <li class="my-1">
-          <a class="motion-title {{ motion.status }} text-decoration-none" href="{{ site.baseurl }}{{ motion.url }}" data-code="#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}">
-            {{motion.title }}
-          </a>
+        <li class="my-1 d-flex align-items-start">
+          <a class="motion-code pe-2 text-decoration-none" href="{{ site.baseurl }}{{ motion.url }}">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</a>
+          <a class="motion-title {{ motion.status }} text-decoration-none" href="{{ site.baseurl }}{{ motion.url }}">{{ motion.title }}</a>
         </li>
+      {% else %}
+        <li class="text-muted">(This section is empty.)</li>
       {% endfor %}
     </ul>
-  {% else %}
-  <p class="section-name fw-bold">{{section.name}}</p>
-  <p class="text-muted fst-italic">(This section is empty.)</p>
-  {% endunless %}
-
   </div>
 {% endfor %}
 </div>
