--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,9 +11,21 @@ layout: default
     <p class="section-name mb-0 fw-bold">{{section.name}}</p>
     <ul class="list-unstyled">
       {% for motion in motions %}
-        <li class="my-1 d-flex align-items-start">
-          <a class="motion-code pe-2 text-decoration-none" href="{{ site.baseurl }}{{ motion.url }}">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</a>
-          <a class="motion-title {{ motion.status }} text-decoration-none" href="{{ site.baseurl }}{{ motion.url }}">{{ motion.title }}</a>
+      {% case motion.status %}
+        {% when "passed" %}
+          {% assign label = "Motion passed" %}
+        {% when "defeated" %}
+          {% assign label = "Motion defeated" %}
+        {% when "referred" %}
+          {% assign label = "Motion referred back to conference" %}
+        {% else %}
+          {% assign label = "" %}
+      {% endcase %}
+        <li class="my-1">
+          <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ site.baseurl }}{{ motion.url }}" class="d-flex align-items-start text-decoration-none">
+            <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
+            <span class="motion-title {{ motion.status }}">{{ motion.title }}</span>
+          </a>
         </li>
       {% else %}
         <li class="text-muted">(This section is empty.)</li>
