--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -28,7 +28,7 @@
 @import "bootstrap/close";
 // @import "bootstrap/toasts";
 // @import "bootstrap/modal";
-// @import "bootstrap/tooltip";
+@import "bootstrap/tooltip";
 // @import "bootstrap/popover";
 // @import "bootstrap/carousel";
 // @import "bootstrap/spinners";
