Tiny tweaks to styles and wording.

--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -27,7 +27,7 @@ layout: primary
       {{ coproposers }}/{{ threshold }} co-proposers
     {% endcapture %}
   {% when "tbd" %}
-    {% assign label = "Not Yet Debated" %}
+    {% assign label = "Motion not yet debated" %}
   {% when "passed" %}
     {% assign label = "Motion passed" %}
   {% when "defeated" %}
