--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -51,6 +51,6 @@ layout: primary
 {{ content }}
 
 <div class="info mb-3">
-  <p class="text-muted">Last updated on {{ site.time | date: "%Y-%m-%d at %H:%M" }}</p>
+  <p class="text-muted">Last updated on {{ page.last-modified-date | date: "%Y-%m-%d at %H:%M" }}</p>
   <a href="{{ page.spaces }}"><button type="button" class="btn btn-outline-primary btn-center">View on Green Spaces</button></a>
 </div>
