--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -13,8 +13,8 @@
 // @import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
-// @import "bootstrap/dropdown";
-// @import "bootstrap/button-group";
+@import "bootstrap/dropdown";
+@import "bootstrap/button-group";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
 // @import "bootstrap/card";
