Tiny CSS improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
           <button type="button" class="d-md-block btn btn-outline-light" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-bookmark"></i>
           </button>
-          {% include toc.html html=content h_min=3 h_max=3 class="shadow dropdown-menu dropdown-menu-end" anchor_class="dropdown-item md-small"  %}
+          {% include toc.html html=content h_min=3 h_max=3 class="shadow dropdown-menu dropdown-menu-end" anchor_class="dropdown-item"  %}
         {% endif %}
         <button class="d-md-none btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-justify"></i>
