--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,8 @@ h1, .navbar-brand {
 }
 
 .navbar-brand {
-  font-size:1.5em
+  font-size:1.5em;
+  margin-right:0;
 }
 
 @include media-breakpoint-down(md) {
