--- a/css/main.scss
+++ b/css/main.scss
@@ -191,3 +191,54 @@ $front-page: (
     }
   }
 }
+
+// Dark mode.
+.dark {
+  background-color:$gray-900;
+  .bg-secondary {
+    background-color:$gray-700 !important;
+  }
+  .bg-tbd {
+    background-color:$gray-700 !important;
+    color:$gray-300;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    color:$gray-200;
+  }
+  p {
+    color:$gray-300;
+  }
+  .text-muted {
+    p {
+      color:#6c757d !important;
+    }
+
+  }
+  .front-page {
+    .motion-code {
+      color:$gray-600;
+    }
+    .motion-title {
+      color: $gray-500;
+    }
+  }
+  .sidebar {
+    .btn {
+      color: $gray-300;
+      &::before {
+        content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28225,225,225,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+      }
+    }
+    a {
+      color: $gray-300;
+    }
+  }
+  .alert {
+    &.alert-primary {
+      color:$green-700;
+    }
+    &.alert-defeated {
+      color:$red-700;
+    }
+  }
+}
