--- a/css/main.scss
+++ b/css/main.scss
@@ -192,6 +192,13 @@ $front-page: (
   }
 }
 
+.dark-mode::after {
+  content:"\F1D2";
+  font-family:"Bootstrap Icons";
+  font-family: 'bootstrap-icons';
+  transition: content 2s ease;
+}
+
 // Dark mode.
 .dark {
   background-color:$gray-900;
@@ -240,5 +247,8 @@ $front-page: (
     &.alert-defeated {
       color:$red-700;
     }
+  }
+  .dark-mode::after {
+    content:"\F497";
   }
 }
