--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,88 +1,13 @@
 <!doctype html>
 <html class="h-100" lang="en">
-
   {% include head.html %}
-
   <body class="body d-flex flex-column h-100">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top shadow-sm">
-      <div class="container">
-        <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><img height="32" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/icons/gpew-logo.png">{{ site.title }}</a>
-        <div class="btn-group">
-          <button class="d-md-none btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="bi bi-justify"></i>
-          </button>
-            <button type="button" class="d-md-block btn btn-outline-light" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi bi-bookmark"></i>
-            </button>
-          {% if content contains "<h3" %}
-            {% include toc.html html=content h_min=3 h_max=3 class="shadow dropdown-menu dropdown-menu-end" anchor_class="dropdown-item"  %}
-          {% else %}
-            <ul class="shadow dropdown-menu dropdown-menu-end">
-              <li class="dropdown-item text-muted">No bookmarks found.</li>
-            </ul>
-          {% endif %}
-        </div>
-      </div>
-    </nav>
-
-    <div class="offcanvas offcanvas-start d-md-none" id="offcanvas">
-      <div class="offcanvas-header">
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        {% include sidebar-motions.html %}
-      </div>
-    </div>
-
+    {% include navbar.html %}
+    {% include offcanvas.html %}
     <div class="container my-3">
-
       {{ content }}
-
     </div>
-
-    <footer class="footer mt-auto py-3 bg-secondary text-light">
-      <div class="container d-flex flex-row justify-content-between">
-        <div class="icons d-flex align-items-center">
-          <a class="link-light" href="https://www.github.com/octotheo/SOC">
-            <i class="bi bi-github"></i>
-          </a>
-          <a class="link-light" href="{{ site.email }}">
-            <i class="bi bi-envelope-fill"></i>
-          </a>
-        </div>
-        <div class="d-flex align-items-center">
-        {% if page.layout == "home" %}<p class="text-light m-0 me-3">Website last updated {{ site.time | date: "%Y-%m-%d at %H:%M" }}</p>{% endif %}
-        <button class="dark-mode btn btn-outline-light" type="button" onclick="darkMode()" aria-controls="toggle" aria-label="Toggle dark mode."></button>
-      </div>
-      </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <script>
-      var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-      return new bootstrap.Tooltip(tooltipTriggerEl)
-    })
-    </script>
-
-    <script>
-    if (localStorage.dark == "true")
-    {
-      const body = document.getElementsByClassName("body");
-      body[0].classList.toggle("dark");
-    }
-    function darkMode() {
-      const body = document.getElementsByClassName("body");
-      body[0].classList.toggle("dark");
-      if (body[0].classList.contains("dark"))
-      {
-          localStorage.setItem('dark', true);
-      }
-      else {
-        localStorage.setItem('dark', false);
-      }
-      }
-    </script>
+    {% include footer.html %}
+    {% include scripts.html %}
   </body>
 </html>
