--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- Styles (including Bootstrap) -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/light.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/dark.css" media="(prefers-color-scheme: dark)">
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ1FD32XK8"></script>
