--- a/_includes/offcanvas.html
+++ b/_includes/offcanvas.html
@@ -1,6 +1,7 @@
 <div class="offcanvas offcanvas-start d-md-none" id="offcanvas">
   <div class="offcanvas-header">
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <h5 class="offcanvas-title" id="offcanvasLabel">{{ site.title }}</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     {% include sidebar-motions.html %}
