--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,26 @@
 ---
 layout: default
 ---
-
 {{ content }}
+
+{% if site.archive_mode == true %}
+<div class="row">
+  <div class="col-md-5">
+    <p>This is the SOC website for compiling and displaying
+    motions for Green Party conference. Motion data is
+    taken from the Green Spaces forum and displayed here,
+    with co-proposer numbers updated regularly by SOC.</p>
+    <p>Between conferences, the website is in archive mode.
+    You can click on the links below to view past conference
+    agendas.</p>
+    {% for conference in site.data.archive %}
+      <a class="d-block mb-2" href="{{ conference.season | slugify }}{{ conference.year }}/"><button class="btn btn-outline-primary">{{ conference.season }} {{conference.year }}</button></a>
+    {% endfor %}
+  </div>
+</div>
+
+{% else %}
+
 
 <div class="row front-page">
 {% for section in site.data.sections %}
@@ -34,3 +52,4 @@ layout: default
   </div>
 {% endfor %}
 </div>
+{% endif %}
