--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer mt-auto py-3 bg-secondary text-light">
   <div class="container d-flex flex-row justify-content-between">
     <div class="icons d-flex align-items-center">
-      <a class="link-light" href="https://www.github.com/octotheo/SOC">
+      <a class="link-light" href="https://www.github.com/AshRouth/SOC">
         <i class="bi bi-github"></i>
       </a>
-      <a class="link-light" href="{{ site.email }}">
+      <a class="link-light" href="mailto:{{ site.email }}">
         <i class="bi bi-envelope-fill"></i>
       </a>
     </div>
