fixed darkmode issues?

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,6 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-KJ1FD32XK8');
+      gtag('config', 'G-KJ1FD32XK8', {cookie_flags: 'SameSite=None;Secure'});
     </script>
   </head>
