--- a/_includes/archive_notice.html
+++ b/_includes/archive_notice.html
@@ -1,4 +1,4 @@
-<div class="archive">
+<aside class="archive-notice">
   <div class="container d-flex align-items-center">
       <i class="bi bi-clock-history pe-3 h1 m-0"></i>
       <div class="wrapper">
@@ -6,4 +6,4 @@
         <p>To see the most recent content, <a class="link-light" href="{{ site.url }}/{{ site.baseurl}}">please visit the homepage.</a></p>
       </div>
   </div>
-</div>
+</aside>
